tests/invalid/semantico_var_no_declarada.flow
// EXPECT: E304
workflow demo {
    start -> validar
    validar -> end if stock_ok
}
